<resources>
    <string name="app_name">Authorization_abramov</string>
    <string name="sign_in">Sign in Abramov</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="profile">Profile</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="success">Вы успешно авторизовались!</string>
</resources>