<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    android:padding="36dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/alegreya"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/emailColor"
        android:ems="10"
        android:fontFamily="@font/alegreya_sans"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/emailColor"
        android:textColorHint="@color/emailColor" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/emailColor"
        android:ems="10"
        android:fontFamily="@font/alegreya_sans"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/emailColor"
        android:textColorHint="@color/emailColor" />

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/alegreya_sans"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/sign_in_btn"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/alegreya_sans"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/btnColor"
        android:enabled="false"
        android:fontFamily="@font/alegreya_sans"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/profile"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textStyle="normal" />

</LinearLayout>